--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -51,6 +51,7 @@
   // ===== Z-INDEX SCALE =====
   --z-dropdown: 1000;
   --z-sticky: 1020;
+  --z-header: 1030;
   --z-fixed: 1030;
   --z-modal-backdrop: 1040;
   --z-modal: 1050;
